--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="curriculum-vitae.ico" />
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="manifest.json" />
 
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="leftcontent-wrapper">
-                        <img src="img/aboutme.png" />
+                        <img src="img/luffy.png" />
                     </div>
                     <div class="rightcontent-wrapper">
                     
@@ -34,10 +34,10 @@
                         <h1 class="name">OAK SOE KHANT</h1>
                         <h4>Softwar Developer</h4>
                         <div class="contact-wrapper">
-                            <div class="content"><a href="https://www.johndoe.dev" target="_blank"> <i
-                                        class="fa fa-laptop"></i><strong> https://www.johndoe.dev</strong></a></div>
+                            <div class="content"><a href="https://www.ppast.dev" target="_blank"> <i
+                                        class="fa fa-laptop"></i><strong> https://www.ppast.dev</strong></a></div>
                             <div class="content"><a href="mailto:john@doe.dev"> <i class="fa fa-envelope"></i>
-                                    john@doe.dev</a></div>
+                                    ppast.dev</a></div>
                             <div class="content"><i class="fa fa-mobile"></i>(+95) 996-068-4571</div>
                             <div class="clearfix"></div>
                         </div>
@@ -62,11 +62,11 @@
 
                     <div class="rightcontent-wrapper">
                         <div class="devops-experiences">
-                            <h4><b>DevOps Engineering </b> - 5 years experiences </h4>
+                            <h4><b>Software Engineering </b> - 5 years experiences </h4>
                             <ul class="two-columns-list">
                                 <li>
-                                    <div class="years">2020 - Current</div>
-                                    <div class="company-name"><strong>DevOps Engineer</strong> at <a
+                                    <div class="years">2018 - Current</div>
+                                    <div class="company-name"><strong>Software Engineer</strong> at <a
                                             href="https://example.com/">Example Corp</a></div>
                                     <div class="clearfix"></div>
                                 </li>
